had to remove nowrap from monologue body.  it was great for verse, but turned prose in to one long line stretching to the right. will have to figure out another way to prevent verse from wrapping on mobile in portrait mode.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -321,7 +321,6 @@ h1.monologue-firstline-heading::first-letter {
     padding: 15px;
     width: 70%;
     margin-bottom: 60px;
-    white-space: nowrap;
 }
 .monologue-body-inline {
     padding: 10px;
@@ -333,7 +332,6 @@ h1.monologue-firstline-heading::first-letter {
     border-width: 1px;
     margin-bottom: 20px;
     min-height: 300px;
-    white-space: nowrap;
 }
 
 .display-hide {
